hphp/hack/test/typecheck/function_pointer/class_meth_interface_inherited.php.exp
File "class_meth_interface_inherited.php", line 10, characters 10-12:
Cannot create a function pointer to `Child::bar`; it is abstract (Typing[4391])
  File "class_meth_interface_inherited.php", line 4, characters 26-28:
  Declaration is here
File "class_meth_interface_inherited.php", line 12, characters 10-12:
Cannot create a function pointer to `Child::bar`; it is abstract (Typing[4391])
  File "class_meth_interface_inherited.php", line 4, characters 26-28:
  Declaration is here
File "class_meth_interface_inherited.php", line 14, characters 10-12:
Cannot create a function pointer to `Child::bar`; it is abstract (Typing[4391])
  File "class_meth_interface_inherited.php", line 4, characters 26-28:
  Declaration is here
