hphp/hack/test/typecheck/function_pointer/class_meth_interface_inherited.php
<?hh

interface Foo {
  public static function bar(): void;
}

abstract class Child implements Foo {}

function test(): void {
  Child::bar<>;

  Child::bar<>;

  Child::bar<>;
}
